--- a/app/src/main/res/xml/termux_style_preferences.xml
+++ b/app/src/main/res/xml/termux_style_preferences.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
         app:key="background"
@@ -10,12 +12,26 @@
             app:summaryOff="@string/termux_background_image_enabled_off"
             app:summaryOn="@string/termux_background_image_enabled_on"
             app:title="@string/termux_background_image_enabled_title" />
-            
+
+        <SwitchPreferenceCompat
+            app:key="use_system_wallpaper"
+            app:title="@string/termux_use_system_wallpaper_title"
+            app:summaryOn="@string/termux_use_system_wallpaper_on"
+            app:summaryOff="@string/termux_use_system_wallpaper_off" />
+
         <SwitchPreferenceCompat
             app:key="monet_background_enabled"
             app:summaryOff="@string/termux_monet_background_enabled_off"
             app:summaryOn="@string/termux_monet_background_enabled_on"
             app:title="@string/termux_monet_background_enabled_title" />
+
+        <androidx.preference.SeekBarPreference
+            app:key="terminal_background_opacity"
+            app:title="@string/termux_terminal_background_opacity_title"
+            app:summary="@string/termux_terminal_background_opacity_summary"
+            android:min="0"
+            android:max="100"
+            app:showSeekBarValue="true" />
     </PreferenceCategory>
     
     <PreferenceCategory
