Changed: decouple launcher icon scaling/height, unify extrakeys/apps blur, refresh wallpaper blur lifecycle

--- a/app/src/main/res/xml/termux_style_preferences.xml
+++ b/app/src/main/res/xml/termux_style_preferences.xml
@@ -44,6 +44,39 @@
             app:summaryOn="@string/termux_extrakeys_blur_enabled_on"
             app:title="@string/termux_extrakeys_blur_enabled_title" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        app:key="app_launcher"
+        app:title="@string/termux_app_launcher_header">
+
+        <EditTextPreference
+            app:key="app_launcher_button_count"
+            app:title="@string/termux_app_launcher_button_count_title"
+            app:summary="@string/termux_app_launcher_button_count_summary"
+            android:defaultValue="5"
+            android:inputType="number" />
+
+        <EditTextPreference
+            app:key="app_launcher_default_buttons"
+            app:title="@string/termux_app_launcher_default_buttons_title"
+            app:summary="@string/termux_app_launcher_default_buttons_summary"
+            android:defaultValue="phone,bromite,whatsapp,telegram,spotify"
+            android:inputType="text" />
+
+        <EditTextPreference
+            app:key="app_launcher_bar_height"
+            app:title="@string/termux_app_launcher_bar_height_title"
+            app:summary="@string/termux_app_launcher_bar_height_summary"
+            android:defaultValue="1.2"
+            android:inputType="numberDecimal" />
+
+        <EditTextPreference
+            app:key="app_launcher_icon_scale"
+            app:title="@string/termux_app_launcher_icon_scale_title"
+            app:summary="@string/termux_app_launcher_icon_scale_summary"
+            android:defaultValue="1.0"
+            android:inputType="numberDecimal" />
+    </PreferenceCategory>
     
     <PreferenceCategory
         app:key="sessions"
