--- a/app/src/main/res/xml/termux_style_preferences.xml
+++ b/app/src/main/res/xml/termux_style_preferences.xml
@@ -67,7 +67,7 @@
             app:key="app_launcher_input_char"
             app:title="@string/termux_app_launcher_input_char_title"
             app:summary="@string/termux_app_launcher_input_char_summary"
-            android:defaultValue="&#x276F;"
+            android:defaultValue=""
             android:inputType="text" />
 
         <EditTextPreference
