--- a/app/src/main/res/xml/termux_style_preferences.xml
+++ b/app/src/main/res/xml/termux_style_preferences.xml
@@ -88,6 +88,22 @@
             app:summary="@string/termux_terminal_background_opacity_summary"
             android:min="0"
             android:max="100"
+            android:defaultValue="100"
+            app:showSeekBarValue="true" />
+
+        <SwitchPreferenceCompat
+            app:key="monet_overlay_enabled"
+            app:summaryOff="@string/termux_monet_overlay_enabled_off"
+            app:summaryOn="@string/termux_monet_overlay_enabled_on"
+            app:title="@string/termux_monet_overlay_enabled_title" />
+
+        <androidx.preference.SeekBarPreference
+            app:key="terminal_blur_radius"
+            app:title="@string/termux_terminal_blur_radius_title"
+            app:summary="@string/termux_terminal_blur_radius_summary"
+            android:min="0"
+            android:max="30"
+            android:defaultValue="0"
             app:showSeekBarValue="true" />
 
         <SwitchPreferenceCompat
@@ -96,11 +112,38 @@
             app:summaryOn="@string/termux_extrakeys_blur_enabled_on"
             app:title="@string/termux_extrakeys_blur_enabled_title" />
 
+        <androidx.preference.SeekBarPreference
+            app:key="extrakeys_blur_radius"
+            app:title="@string/termux_extrakeys_blur_radius_title"
+            app:summary="@string/termux_extrakeys_blur_radius_summary"
+            android:min="0"
+            android:max="30"
+            android:defaultValue="10"
+            app:showSeekBarValue="true" />
+
+        <androidx.preference.SeekBarPreference
+            app:key="app_bar_opacity"
+            app:title="@string/termux_app_bar_opacity_title"
+            app:summary="@string/termux_app_bar_opacity_summary"
+            android:min="0"
+            android:max="100"
+            android:defaultValue="50"
+            app:showSeekBarValue="true" />
+
         <SwitchPreferenceCompat
             app:key="sessions_blur_enabled"
             app:summaryOff="@string/termux_sessions_blur_enabled_off"
             app:summaryOn="@string/termux_sessions_blur_enabled_on"
             app:title="@string/termux_sessions_blur_enabled_title" />
+
+        <androidx.preference.SeekBarPreference
+            app:key="sessions_blur_radius"
+            app:title="@string/termux_sessions_blur_radius_title"
+            app:summary="@string/termux_sessions_blur_radius_summary"
+            android:min="0"
+            android:max="30"
+            android:defaultValue="10"
+            app:showSeekBarValue="true" />
 
         <SwitchPreferenceCompat
             app:key="app_launcher_show_icons"
