--- a/app/src/main/res/layout/activity_termux.xml
+++ b/app/src/main/res/layout/activity_termux.xml
@@ -8,29 +8,34 @@
     android:orientation="vertical"
     android:fitsSystemWindows="false">
 
-    <View
-        android:id="@+id/terminal_monetbackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/background_accent"/>
-
-    <com.github.mmin18.widget.RealtimeBlurView
-        android:id="@+id/terminal_backgroundblur"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        app:realtimeBlurRadius="10dp"
-        app:realtimeOverlayColor="@android:color/transparent" />
-
-    <RelativeLayout
-        android:id="@+id/activity_termux_root_relative_layout"
+    <FrameLayout
+        android:id="@+id/terminal_root_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginHorizontal="0dp"
-        android:layout_marginVertical="0dp"
-        android:orientation="vertical"
-        android:fitsSystemWindows="true">
+        android:layout_weight="1">
+
+        <View
+            android:id="@+id/terminal_monetbackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/background_accent"/>
+
+        <com.github.mmin18.widget.RealtimeBlurView
+            android:id="@+id/terminal_backgroundblur"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:realtimeBlurRadius="10dp"
+            app:realtimeOverlayColor="@android:color/transparent" />
+
+        <RelativeLayout
+            android:id="@+id/activity_termux_root_relative_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="0dp"
+            android:layout_marginVertical="0dp"
+            android:orientation="vertical"
+            android:fitsSystemWindows="true">
 
         <androidx.drawerlayout.widget.DrawerLayout
             android:id="@+id/drawer_layout"
@@ -190,7 +195,8 @@
             android:layout_height="37.5dp"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent"/>
-    </RelativeLayout>
+        </RelativeLayout>
+    </FrameLayout>
 
     <View
         android:id="@+id/activity_termux_bottom_space_view"
