--- a/app/src/main/res/xml/termux_style_preferences.xml
+++ b/app/src/main/res/xml/termux_style_preferences.xml
@@ -82,6 +82,13 @@
             app:summaryOn="@string/termux_monet_background_enabled_on"
             app:title="@string/termux_monet_background_enabled_title" />
 
+        <Preference
+            app:key="monet_background_guide"
+            app:title="@string/termux_monet_background_guide_title"
+            app:summary="@string/termux_monet_background_guide_summary"
+            app:selectable="false"
+            app:iconSpaceReserved="false" />
+
         <androidx.preference.SeekBarPreference
             app:key="terminal_background_opacity"
             app:title="@string/termux_terminal_background_opacity_title"
@@ -90,12 +97,6 @@
             android:max="100"
             android:defaultValue="100"
             app:showSeekBarValue="true" />
-
-        <SwitchPreferenceCompat
-            app:key="monet_overlay_enabled"
-            app:summaryOff="@string/termux_monet_overlay_enabled_off"
-            app:summaryOn="@string/termux_monet_overlay_enabled_on"
-            app:title="@string/termux_monet_overlay_enabled_title" />
 
         <androidx.preference.SeekBarPreference
             app:key="terminal_blur_radius"
