--- a/app/src/main/res/xml/termux_preferences.xml
+++ b/app/src/main/res/xml/termux_preferences.xml
@@ -20,4 +20,9 @@
         app:summary="@string/termux_style_preferences_summary"
         app:fragment="com.termux.app.fragments.settings.termux.TermuxStylePreferencesFragment"/>
 
+    <Preference
+        app:title="@string/termux_privileged_access_preferences_title"
+        app:summary="@string/termux_privileged_access_preferences_summary"
+        app:fragment="com.termux.app.fragments.settings.termux.PrivilegedAccessPreferencesFragment"/>
+
 </PreferenceScreen>
