--- a/app/src/main/res/xml/termux_style_preferences.xml
+++ b/app/src/main/res/xml/termux_style_preferences.xml
@@ -4,65 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
-        app:key="app_launcher"
-        app:title="@string/termux_app_launcher_header" />
-
-    <PreferenceCategory
-        app:key="app_launcher_search"
-        app:title="@string/termux_app_launcher_search_header">
-
-        <ListPreference
-            app:key="app_launcher_search_mode"
-            app:title="@string/termux_app_launcher_search_mode_title"
-            app:summary="@string/termux_app_launcher_search_mode_summary"
-            android:defaultValue="balanced"
-            app:entries="@array/app_launcher_search_mode_entries"
-            app:entryValues="@array/app_launcher_search_mode_values" />
-
-        <EditTextPreference
-            app:key="app_launcher_input_char"
-            app:title="@string/termux_app_launcher_input_char_title"
-            app:summary="@string/termux_app_launcher_input_char_summary"
-            android:defaultValue=""
-            android:inputType="text" />
-
-        <EditTextPreference
-            app:key="app_launcher_default_buttons"
-            app:title="@string/termux_app_launcher_default_buttons_title"
-            app:summary="@string/termux_app_launcher_default_buttons_summary"
-            android:defaultValue="phone,bromite,whatsapp,telegram,spotify"
-            android:inputType="text" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        app:key="app_launcher_layout"
-        app:title="@string/termux_app_launcher_layout_header">
-
-        <EditTextPreference
-            app:key="app_launcher_button_count"
-            app:title="@string/termux_app_launcher_button_count_title"
-            app:summary="@string/termux_app_launcher_button_count_summary"
-            android:defaultValue="5"
-            android:inputType="number" />
-
-        <EditTextPreference
-            app:key="app_launcher_bar_height"
-            app:title="@string/termux_app_launcher_bar_height_title"
-            app:summary="@string/termux_app_launcher_bar_height_summary"
-            android:defaultValue="1.2"
-            android:inputType="numberDecimal" />
-
-        <EditTextPreference
-            app:key="app_launcher_icon_scale"
-            app:title="@string/termux_app_launcher_icon_scale_title"
-            app:summary="@string/termux_app_launcher_icon_scale_summary"
-            android:defaultValue="1.0"
-            android:inputType="numberDecimal" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        app:key="app_launcher_appearance"
-        app:title="@string/termux_app_launcher_appearance_header">
+        app:key="termux_background"
+        app:title="@string/termux_background_header">
 
         <SwitchPreferenceCompat
             app:key="background_image_enabled"
@@ -138,18 +81,6 @@
             android:max="30"
             android:defaultValue="10"
             app:showSeekBarValue="true" />
-
-        <SwitchPreferenceCompat
-            app:key="app_launcher_show_icons"
-            app:title="@string/termux_app_launcher_show_icons_title"
-            app:summary="@string/termux_app_launcher_show_icons_summary"
-            android:defaultValue="true" />
-
-        <SwitchPreferenceCompat
-            app:key="app_launcher_bw_icons"
-            app:title="@string/termux_app_launcher_bw_icons_title"
-            app:summary="@string/termux_app_launcher_bw_icons_summary"
-            android:defaultValue="false" />
     </PreferenceCategory>
 
 </PreferenceScreen>
